force-app/main/default/objects/Zuora_Setting__mdt/Zuora_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Integration settings for Zuora API</description>
    <label>Zuora Setting</label>
    <pluralLabel>Zuora Settings</pluralLabel>
</CustomObject>