force-app/main/default/objects/Zuora_Setting__mdt/fields/ACH_Payment_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment_Page_Id__c</fullName>
    <inlineHelpText>ACH Hosted Payment Page ID</inlineHelpText>
    <label>ACH Payment Page Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>