force-app/main/default/objects/Zuora_Setting__mdt/fields/ACH_Payment_Page_Id_Internal__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment_Page_Id_Internal__c</fullName>
    <inlineHelpText>ACH Hosted Payment Page ID with domain = perchenergy.lightning.force.com</inlineHelpText>
    <label>ACH Payment Page Id Internal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>