force-app/main/default/objects/Zuora_Setting__mdt/fields/API_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_URL__c</fullName>
    <description>https://knowledgecenter.zuora.com/CB_Billing/LA_Hosted_Payment_Pages/B_Payment_Pages_2.0/F_Generate_the_Digital_Signature_for_Payment_Pages_2.0</description>
    <inlineHelpText>The endpoint URL for the CORS Rest API. See Zuora REST documentation for valid values</inlineHelpText>
    <label>API Endpoint URL</label>
    <type>Url</type>
</CustomField>