force-app/main/default/objects/Zuora_Setting__mdt/fields/CC_Payment_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Payment_Page_Id__c</fullName>
    <inlineHelpText>Credit Card Hosted Payment Page ID</inlineHelpText>
    <label>CC Payment Page Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>