force-app/main/default/objects/Zuora_Setting__mdt/fields/CC_Payment_Page_Id_Internal__c.field-meta.xml
<CustomField>
    <fullName>CC_Payment_Page_Id_Internal__c</fullName>
    <inlineHelpText>CC Hosted Payment Page ID with domain = perchenergy.lightning.force.com</inlineHelpText>
    <label>CC Payment Page Id Internal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>