force-app/main/default/objects/Zuora_Setting__mdt/fields/Hosted_Payment_Page_URI__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Payment_Page_URI__c</fullName>
    <description>https://knowledgecenter.zuora.com/CB_Billing/LA_Hosted_Payment_Pages/B_Payment_Pages_2.0/F_Generate_the_Digital_Signature_for_Payment_Pages_2.0</description>
    <inlineHelpText>The URL that the Payment Page will be served from. Get a sandbox or production URI from HPM documentation</inlineHelpText>
    <label>Hosted Payment Page URI</label>
    <type>Url</type>
</CustomField>