force-app/main/default/objects/Zuora_Setting__mdt/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>