force-app/main/default/objects/Zuora_Setting__mdt/fields/Zuora_Is_Live__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Is_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zuora Is Live</label>
    <type>Checkbox</type>
</CustomField>